[gd_scene load_steps=18 format=2]

[ext_resource path="res://ModMenu/ModMenu/menu/ModMenuSettingsLayer.gd" type="Script" id=1]
[ext_resource path="res://ModMenu/ModMenu/menu/CheckForModUpdates.gd" type="Script" id=2]
[ext_resource path="res://ModMenu/ModMenu/menu/MainUpdateSettings.gd" type="Script" id=3]
[ext_resource path="res://hud/TabHintContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://ModMenu/ModMenu/menu/DisplayModsLocation.gd" type="Script" id=5]
[ext_resource path="res://ModMenu/ModMenu/menu/ZipLabel.gd" type="Script" id=6]
[ext_resource path="res://menu/MenuTheme.tres" type="Theme" id=7]
[ext_resource path="res://menu/PanelWithHugeShadow.tres" type="StyleBox" id=8]
[ext_resource path="res://ModMenu/ModMenu/menu/ButtonLocation.gd" type="Script" id=9]
[ext_resource path="res://menu/TabsWithGamepadControl.gd" type="Script" id=10]
[ext_resource path="res://menu/sfx/PlaySoundsOnTheseButtons.tscn" type="PackedScene" id=11]
[ext_resource path="res://ModMenu/ModMenu/menu/ExtendedSettings.gd" type="Script" id=12]
[ext_resource path="res://ModMenu/ModMenu/menu/accessibleTooltips.gd" type="Script" id=13]
[ext_resource path="res://ModMenu/ModMenu/menu/ClearMMCFG.gd" type="Script" id=14]
[ext_resource path="res://ModMenu/ModMenu/menu/ClearCache.gd" type="Script" id=15]
[ext_resource path="res://ModMenu/ModMenu/menu/ClearCFG.gd" type="Script" id=16]
[ext_resource path="res://ModMenu/ModMenu/menu/OpenCache.gd" type="Script" id=17]

[node name="ModMenuMenu" type="Popup"]
visible = true
margin_left = -400.0
margin_right = 160.0
margin_bottom = 750.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 750 )
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 7 )
popup_exclusive = true
script = ExtResource( 1 )

[node name="NoMargins" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlaySoundsOnTheseButtons" parent="NoMargins" instance=ExtResource( 11 )]

[node name="CenterContainer" type="CenterContainer" parent="NoMargins"]
margin_right = 1070.0
margin_bottom = 750.0
rect_min_size = Vector2( 800, 720 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabHintContainer" parent="NoMargins/CenterContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 17.0
margin_right = 1070.0
margin_bottom = 733.0
rect_min_size = Vector2( 1070, 716 )
size_flags_horizontal = 4

[node name="MarginContainer" parent="NoMargins/CenterContainer/TabHintContainer" index="0"]
margin_right = 1070.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 32 )
custom_constants/margin_right = -80
custom_constants/margin_left = -80

[node name="HBoxContainer" parent="NoMargins/CenterContainer/TabHintContainer/MarginContainer" index="0"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_left = -80.0
margin_right = 1150.0
margin_bottom = 43.0
size_flags_vertical = 3

[node name="Right" parent="NoMargins/CenterContainer/TabHintContainer/MarginContainer/HBoxContainer" index="0"]
visible = false
margin_bottom = 39.0

[node name="Label" parent="NoMargins/CenterContainer/TabHintContainer/MarginContainer/HBoxContainer" index="1"]
margin_left = 0.0
margin_top = 0.0
margin_right = 1230.0
margin_bottom = 39.0

[node name="Left" parent="NoMargins/CenterContainer/TabHintContainer/MarginContainer/HBoxContainer" index="2"]
visible = false
margin_left = 1150.0
margin_right = 1230.0
margin_bottom = 39.0

[node name="TabsWithGamepadControl" type="TabContainer" parent="NoMargins/CenterContainer/TabHintContainer"]
show_behind_parent = true
margin_right = 1070.0
margin_bottom = 716.0
rect_min_size = Vector2( 0, 716 )
size_flags_vertical = 3
custom_styles/panel = ExtResource( 8 )
use_hidden_tabs_for_min_size = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MODMENU_MAIN_TOGGLES" type="Tabs" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 50.0
margin_right = -1.0
margin_bottom = -1.0

[node name="MarginContainer" type="MarginContainer" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 16
custom_constants/margin_left = 0
custom_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer"]
margin_top = 16.0
margin_right = 1068.0
margin_bottom = 617.0
custom_constants/separation = 6

[node name="usePrerelease" type="OptionButton" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer"]
margin_right = 1068.0
margin_bottom = 41.0
hint_tooltip = "MODMENU_SETTINGS_FETCH_PRE_RELEASES_TOOLTIP"
align = 2
script = ExtResource( 3 )

[node name="Label" type="Label" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/usePrerelease"]
margin_left = 20.0
margin_right = 628.0
margin_bottom = 39.0
text = "MODMENU_SETTINGS_UPDATER"

[node name="updatePrefs" type="OptionButton" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 1068.0
margin_bottom = 88.0
hint_tooltip = "MODMENU_SETTINGS_UPDATE_PREFS_TOOLTIP"
align = 2
script = ExtResource( 2 )

[node name="Label" type="Label" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/updatePrefs"]
margin_left = 20.0
margin_right = 628.0
margin_bottom = 39.0
text = "MODMENU_SETTINGS_UPDATE_PREFS"

[node name="displayLocation" type="OptionButton" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 1068.0
margin_bottom = 135.0
hint_tooltip = "MODMENU_SETTINGS_UPDATE_PREFS_TOOLTIP"
align = 2
script = ExtResource( 5 )

[node name="Label" type="Label" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/displayLocation"]
margin_left = 20.0
margin_right = 628.0
margin_bottom = 39.0
text = "MODMENU_SETTINGS_DISPLAY_LOCATION"

[node name="zipListing" type="OptionButton" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer"]
margin_top = 141.0
margin_right = 1068.0
margin_bottom = 182.0
hint_tooltip = "MODMENU_SETTINGS_UPDATE_PREFS_TOOLTIP"
align = 2
script = ExtResource( 6 )

[node name="Label" type="Label" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/zipListing"]
margin_left = 20.0
margin_right = 628.0
margin_bottom = 39.0
text = "MODMENU_SETTINGS_ZIPLOCATION"

[node name="buttonLocation" type="OptionButton" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 1068.0
margin_bottom = 229.0
hint_tooltip = "MODMENU_SETTINGS_BUTTON_LOCATION_TOOLTIP"
align = 2
script = ExtResource( 9 )

[node name="Label" type="Label" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/buttonLocation"]
margin_left = 20.0
margin_right = 753.0
margin_bottom = 39.0
hint_tooltip = "MODMENU_SETTINGS_BUTTON_LOCATION_TOOLTIP"
mouse_filter = 1
text = "MODMENU_SETTINGS_BUTTON_LOCATION"

[node name="accessibleTooltips" type="OptionButton" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer"]
margin_top = 235.0
margin_right = 1068.0
margin_bottom = 276.0
hint_tooltip = "MODMENU_SETTINGS_ACCESSIBLE_TOOLTIP"
align = 2
script = ExtResource( 13 )

[node name="Label" type="Label" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/accessibleTooltips"]
margin_left = 20.0
margin_right = 753.0
margin_bottom = 39.0
hint_tooltip = "MODMENU_SETTINGS_BUTTON_LOCATION_TOOLTIP"
mouse_filter = 1
text = "MODMENU_SETTINGS_ACCESSIBLE"

[node name="extendedSaves" type="CheckButton" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer"]
margin_top = 282.0
margin_right = 1068.0
margin_bottom = 323.0
text = "MODMENU_USE_EXTENDED_SAVES"
script = ExtResource( 12 )

[node name="VBoxContainer2" type="VBoxContainer" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer"]
visible = false
margin_top = 16.0
margin_right = 1068.0
margin_bottom = 617.0
alignment = 2

[node name="purgeData" type="Button" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer2"]
margin_top = 517.0
margin_right = 1068.0
margin_bottom = 558.0
hint_tooltip = "MODMENU_SETTINGS_PURGE_CONFIG_FILE_TOOLTIP"
text = "MODMENU_SETTINGS_PURGE_CONFIG_FILE"

[node name="Label" type="Label" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer2"]
margin_top = 562.0
margin_right = 1068.0
margin_bottom = 601.0

[node name="VBoxContainer" type="VBoxContainer" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES"]
margin_left = -8.0
margin_top = 476.0
margin_right = 493.0
margin_bottom = 611.0
rect_min_size = Vector2( 0, 135 )

[node name="Save" type="Button" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/VBoxContainer"]
margin_right = 501.0
margin_bottom = 41.0
hint_tooltip = "MODMENU_SAVE_TOOLTIP"
text = "SETTINGS_SAVE"

[node name="Restart" type="Button" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/VBoxContainer"]
margin_top = 45.0
margin_right = 501.0
margin_bottom = 86.0
hint_tooltip = "MODMENU_SAR_TOOLTIP"
text = "SETTINGS_SAVE_RESTART"

[node name="Cancel" type="Button" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/VBoxContainer"]
margin_top = 90.0
margin_right = 501.0
margin_bottom = 131.0
text = "SETTINGS_CANCEL"

[node name="HBoxContainer" type="HBoxContainer" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES"]
margin_left = 395.0
margin_top = 476.0
margin_right = 1074.0
margin_bottom = 611.0
alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/HBoxContainer"]
margin_right = 679.0
margin_bottom = 135.0
rect_min_size = Vector2( 0, 135 )

[node name="ClearMMCFG" type="Button" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/HBoxContainer/VBoxContainer2"]
margin_right = 679.0
margin_bottom = 41.0
hint_tooltip = "MODMENU_SETTINGS_CLEAR_MM_TOOLTIP"
text = "MODMENU_SETTINGS_CLEAR_MM"
script = ExtResource( 14 )

[node name="ClearCFG" type="Button" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/HBoxContainer/VBoxContainer2"]
margin_top = 45.0
margin_right = 679.0
margin_bottom = 86.0
hint_tooltip = "MODMENU_SETTINGS_CLEAR_CFG_TOOLTIP"
text = "MODMENU_SETTINGS_CLEAR_CFG"
script = ExtResource( 16 )

[node name="ClearCache" type="Button" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/HBoxContainer/VBoxContainer2"]
margin_top = 90.0
margin_right = 679.0
margin_bottom = 131.0
hint_tooltip = "MODMENU_CACHE_REMOVE"
text = "MODMENU_SETTINGS_CLEAR_CACHE"
script = ExtResource( 15 )

[node name="OpenCache" type="Button" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES"]
margin_top = 616.0
margin_right = 1068.0
margin_bottom = 657.0
text = "MODMENU_OPEN_CACHE"
script = ExtResource( 17 )

[connection signal="about_to_show" from="." to="." method="_on_ModMenuMenu_about_to_show"]
[connection signal="item_selected" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/usePrerelease" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/usePrerelease" method="_on_OptionButton_item_selected"]
[connection signal="visibility_changed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/usePrerelease" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/usePrerelease" method="_on_OptionButton_visibility_changed"]
[connection signal="item_selected" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/updatePrefs" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/updatePrefs" method="_on_OptionButton_item_selected"]
[connection signal="visibility_changed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/updatePrefs" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/updatePrefs" method="_on_OptionButton_visibility_changed"]
[connection signal="item_selected" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/displayLocation" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/displayLocation" method="_on_displayLocation_item_selected"]
[connection signal="visibility_changed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/displayLocation" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/displayLocation" method="_on_displayLocation_visibility_changed"]
[connection signal="item_selected" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/zipListing" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/zipListing" method="_on_OptionButton_item_selected"]
[connection signal="visibility_changed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/zipListing" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/zipListing" method="_on_OptionButton_visibility_changed"]
[connection signal="item_selected" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/buttonLocation" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/buttonLocation" method="_on_OptionButton_item_selected"]
[connection signal="visibility_changed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/buttonLocation" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/buttonLocation" method="_on_OptionButton_visibility_changed"]
[connection signal="item_selected" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/accessibleTooltips" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/accessibleTooltips" method="_on_OptionButton_item_selected"]
[connection signal="visibility_changed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/accessibleTooltips" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/accessibleTooltips" method="_on_OptionButton_visibility_changed"]
[connection signal="toggled" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/extendedSaves" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/extendedSaves" method="_toggled"]
[connection signal="visibility_changed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/extendedSaves" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/MarginContainer/VBoxContainer/extendedSaves" method="_visibility_changed"]
[connection signal="pressed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/VBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/HBoxContainer/VBoxContainer2/ClearMMCFG" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/HBoxContainer/VBoxContainer2/ClearMMCFG" method="_on_ClearMMCFG_pressed"]
[connection signal="pressed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/HBoxContainer/VBoxContainer2/ClearCFG" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/HBoxContainer/VBoxContainer2/ClearCFG" method="_on_ClearCFG_pressed"]
[connection signal="pressed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/HBoxContainer/VBoxContainer2/ClearCache" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/HBoxContainer/VBoxContainer2/ClearCache" method="_on_ClearCache_pressed"]
[connection signal="pressed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/OpenCache" to="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/MODMENU_MAIN_TOGGLES/OpenCache" method="_on_OpenCache_pressed"]

[editable path="NoMargins/CenterContainer/TabHintContainer"]
